# mcpforge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION-ROADMAP.md  LICENSE  Makefile  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/database-query-server/: README.md  config.json  pyproject.toml  server.py  test_server.py
examples/file-reader-server/: README.md  config.json  pyproject.toml  server.py  test_server.py
examples/slack-notifier-server/: README.md  config.json  pyproject.toml  server.py  test_server.py
examples/todo-server/: README.md  config.json  pyproject.toml  server.py  test_server.py
examples/ts-todo-server/: package.json  tsconfig.json
examples/ts-todo-server/src/: server.test.ts  server.ts
examples/weather-server/: README.md  config.json  pyproject.toml  server.py  test_server.py
src/mcpforge/: __init__.py  api_client.py  cli.py  discovery.py  generator.py  generator_ts.py  mcp_server.py  models.py  openapi.py  planner.py  sandbox.py  security.py  self_heal.py  template_hints.py  test_generator.py  updater.py  utils.py  validator.py  validator_ts.py  writer.py
src/mcpforge/prompts/: __init__.py  generator.md  generator_multi.md  generator_ts.md  planner.md  self_heal.md  test_gen.md  test_gen_ts.md  updater.md
src/mcpforge/templates/: README.md.j2  config.json.j2  init_server.py.j2  init_test.py.j2  pyproject.toml.j2
src/mcpforge/templates/ts/: package.json.j2
tests/: test_api_client_streaming.py  test_cli.py  test_cli_phase3.py  test_cli_phase4.py  test_discovery.py  test_generator.py  test_generator_multi.py  test_generator_ts.py  test_mcp_server.py  test_models.py  test_openapi.py  test_planner.py  test_planner_refine.py  test_sandbox.py  test_security.py  test_self_heal.py  test_template_hints.py  test_updater.py  test_validator.py  test_writer.py
tests/fixtures/: sample_descriptions.py  sample_plans.py
